Very minor changes

--- a/Annual Review 2019 Report/OneYearReport 0.1.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.1.tex
@@ -140,6 +140,7 @@ Lorem Ipsum \\
 %TODO
 \subsubsection{Related research regarding offshore projects} \label{sss:offsh}
 A group of researchers at my department, whose research \cite{barlow2018mixed} I have already described in \Cref{sss:sched}, have developed a simulation tool with which various logistical decisions for the installation of an OWF have been explored. In \cite{barlow2014support} the number of installation vessels and supply barges is experimented with, as well as their relative release dates. These simulations consider only the installation of OSPs and not WTGs. There are several measures considered for the quality of a setup such as the total cost of the project and the completion dates of the first and last OSPs, as well as the uncertainty of those measures (shown through the median and 90\% confidence interval for these measures, resulting from 100 simulations). In \cite{barlow2014assessment} the same tool is used to compare several types of installation vessels. 
+CONTINUING FROM HERE
 
 \cite{barlow2017using} \\
 \cite{leggate2010crew} \\
